ul li icons overlaping fixed

--- a/src/block/editor.scss
+++ b/src/block/editor.scss
@@ -190,6 +190,11 @@ $button-lg-lineheight: 1.5 !default;
 }
 
 // Editor specific styles
+.wppc-box .components-autocomplete{
+	position: relative;
+	display: inline-block;
+}
+
 .wp-pros-cons .wppc-btn-wrapper .components-autocomplete {
 	margin-bottom: 10px;
 	position: relative;
